Add company filtering and ui changes

--- a/src/app/pages/dashboard/companies/company-form-dialog/company-form-dialog.component.html
+++ b/src/app/pages/dashboard/companies/company-form-dialog/company-form-dialog.component.html
@@ -2,7 +2,7 @@
   <div class="modal-content" *ngIf="gettingCompany">
     <div class="py-5 d-flex align-items-center justify-content-center">
       <div class="spinner-border" role="status"></div>
-      <span class="ms-2 text-nowrap">Loading company details...</span>
+      <span class="me-2 text-nowrap">Loading company details...</span>
     </div>
   </div>
   <form class="modal-content" [formGroup]="form" *ngIf="!gettingCompany">
