--- a/src/app/pages/dashboard/companies/companies.component.html
+++ b/src/app/pages/dashboard/companies/companies.component.html
@@ -1,13 +1,4 @@
-<div class="py-5 d-flex align-items-center justify-content-center" *ngIf="gettingCompanies" style="height: 100vh;">
-  <div class="spinner-border spinner-border-sm" role="status"></div>
-  <span class="ms-2 text-nowrap">Loading Companies...</span>
-</div>
-
-<div class="py-5 d-flex align-items-center justify-content-center" *ngIf="gettingCompaniesError" style="height: 100vh;">
-  <app-reload-page-warning></app-reload-page-warning>
-</div>
-
-<div class="card overflow-hidden" *ngIf="!gettingCompanies && !gettingCompaniesError">
+<div class="card overflow-hidden">
   <div class="d-flex border-bottom p-3 align-items-center text-nowrap">
     <h4 class="mb-0 me-3">Companies</h4>
     <button class="btn btn-secondary ms-auto me-2" (click)="displayFilters()">
@@ -17,13 +8,22 @@
     </button>
     <button class="btn btn-primary" (click)="openCompanyFormDialog(0)"><i class="fas fa-plus-circle me-2"></i>Add New Company</button>
   </div>
+
   <div class="d-flex overflow-hidden">
 
-    <app-filter-companies-form [showFilters]="showFilters"></app-filter-companies-form>
+    <app-filter-companies-form [showFilters]="showFilters" [total]="companies.length"></app-filter-companies-form>
 
-    <div class="d-flex flex-column w-100 overflow-auto">
-      <table class="custom-table text-nowrap">
-        <thead class="bg-light border-bottom">
+    <div class="d-flex flex-column w-100 overflow-auto" style="height: calc(100vh - 100px)">
+
+      <div class="py-5 d-flex align-items-center justify-content-center" *ngIf="gettingCompanies">
+        <div class="spinner-border spinner-border-sm" role="status"></div>
+        <span class="ms-2 text-nowrap">Loading Companies...</span>
+      </div>
+
+      <b class="w-100 py-5 text-center" *ngIf="!gettingCompanies && companies.length == 0">No Data</b>
+
+      <table class="custom-table text-nowrap" *ngIf="!gettingCompanies && companies.length > 0">
+        <thead class="bg-light sticky-top">
           <tr>
             <th scope="col">Id</th>
             <th scope="col">Name</th>
@@ -34,7 +34,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="border-top border-bottom" *ngFor="let company of companies">
+          <tr *ngFor="let company of companies">
             <td>{{company.id}}</td>
             <td>{{company.name}}</td>
             <td>{{company.dateAdded | date:'longDate'}}</td>
