--- a/src/app/pages/dashboard/users/users.component.scss
+++ b/src/app/pages/dashboard/users/users.component.scss
@@ -1,11 +1,3 @@
-tr th:last-of-type{
-    text-align: end;
-}
-
-tr td:last-of-type{
-    text-align: end;
-}
-
 .fa-circle{
     font-size: 10px;
 }
@@ -27,4 +19,43 @@ tr td:last-of-type{
 .table-wrapper{
   width: 100%;
   overflow: auto;
+}
+
+@import '../../../../styles.scss';
+
+.card{
+  position: absolute;
+  top: 16px;
+  bottom: 16px;
+  left: 236px;
+  right: 16px;
+}
+
+table {
+  border-collapse: separate;
+  border-spacing: 0;
+}
+
+table thead{
+  z-index: 10 !important;
+}
+
+table thead tr th{
+  border-bottom: 1px solid $gray-300;
+}
+
+table tbody tr td{
+  transform: translateY(-1px);
+}
+
+table tbody tr:last-of-type td{
+  border-bottom: 1px solid $gray-300;
+}
+
+tr th:last-of-type{
+  text-align: end;
+}
+
+tr td:last-of-type{
+  text-align: end;
 }
