--- a/src/app/pages/dashboard/companies/companies.component.html
+++ b/src/app/pages/dashboard/companies/companies.component.html
@@ -20,7 +20,7 @@
         <span class="ms-2 text-nowrap">Loading Companies...</span>
       </div>
 
-      <b class="w-100 py-5 text-center" *ngIf="!gettingCompanies && companies.length == 0">No Data</b>
+      <b class="w-100 py-5 text-center" *ngIf="!gettingCompanies && companies.length == 0">No data found</b>
 
       <table class="custom-table text-nowrap" *ngIf="!gettingCompanies && companies.length > 0">
         <thead class="bg-light sticky-top">
