Update ui and company filters

--- a/src/app/pages/dashboard/companies/filter-companies-form/filter-companies-form.component.html
+++ b/src/app/pages/dashboard/companies/filter-companies-form/filter-companies-form.component.html
@@ -12,16 +12,16 @@
 
     <label class="form-label">Added Date Range</label>
     <div class="d-flex mb-3 align-items-center">
-      <input type="date" class="form-control" id="dateAddedMin" formControlName="dateAddedMin">
+      <input type="date" class="form-control" id="dateAddedStart" formControlName="dateAddedStart">
       <span class="mx-2">to</span>
-      <input type="date" class="form-control" id="dateAddedMax" formControlName="dateAddedMax">
+      <input type="date" class="form-control" id="dateAddedEnd" formControlName="dateAddedEnd">
     </div>
 
     <label class="form-label">Updated Date Range</label>
     <div class="d-flex mb-3 align-items-center">
-      <input type="date" class="form-control" id="dateLastUpdatedMin" formControlName="dateLastUpdatedMin">
+      <input type="date" class="form-control" id="dateLastUpdatedStart" formControlName="dateLastUpdatedStart">
       <span class="mx-2">to</span>
-      <input type="date" class="form-control" id="dateLastUpdatedMax" formControlName="dateLastUpdatedMax">
+      <input type="date" class="form-control" id="dateLastUpdatedEnd" formControlName="dateLastUpdatedEnd">
     </div>
 
     <label class="form-label">Last Editor</label>
