--- a/src/app/pages/dashboard/clients/client-form-dialog/client-form-dialog.component.html
+++ b/src/app/pages/dashboard/clients/client-form-dialog/client-form-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="modal-dialog">
+<div class="modal-dialog modal-dialog-scrollable">
     <div class="modal-content" *ngIf="gettingClient">
         <div class="py-5 d-flex align-items-center justify-content-center">
             <div class="spinner-border" role="status"></div>
@@ -35,13 +35,25 @@
 
             <div class="mb-3">
                 <label for="company" class="form-label">Company</label>
-                <select class="form-select mb-3" id="company" formControlName="company">
+                <select class="form-select" id="company" formControlName="company">
                     <option selected></option>
                     <option value="{{company.id}}" *ngFor="let company of companies">{{company.name}}</option>
-                  </select>
+                </select>
+                <div class="form-text">Leave blank if the client does not belong to a company.</div>
                 <div class="invalid-feedback">
                     <div *ngIf="form.controls.surname.errors?.required">Required field</div>
                 </div>
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label w-100">Tags</label>
+
+                <span *ngFor="let tag of tags"> 
+                    <input type="checkbox" class="btn-check" id="{{tag.name}}" autocomplete="off" value="{{tag.id}}">
+                    <label class="btn btn-sm btn-outline-primary rounded-pill mb-1 me-1" for="{{tag.name}}">{{tag.name}}</label>
+                </span>
+
+                <div class="form-text">Select tags that are relevant to the client.</div>
             </div>
 
             <div class="mb-3">
