--- a/src/app/pages/dashboard/clients/clients.component.html
+++ b/src/app/pages/dashboard/clients/clients.component.html
@@ -1,11 +1,20 @@
 <div class="card overflow-hidden">
+
   <div class="d-flex border-bottom p-3 align-items-center">
     <h4 class="mb-0 me-3">Clients</h4>
-    <button class="btn btn-secondary ms-auto"><i class="fas fa-filter me-2"></i>Show Filters</button>
+    <button class="btn btn-secondary ms-auto me-2" (click)="displayFilters()">
+      <i class="fas fa-filter me-2"></i>
+      <span *ngIf="showFilters">Hide Filters</span>
+      <span *ngIf="!showFilters">Show Filters</span>
+    </button>
     <button class="btn btn-secondary ms-2"><i class="fas fa-download me-2"></i>Export List</button>
     <button class="btn btn-primary ms-2" (click)="openClientFormDialog(0)"><i class="fas fa-plus-circle me-2"></i>Add New Client</button>
   </div>
+
   <div class="d-flex overflow-hidden">
+
+    <app-filter-clients-form [showFilters]="showFilters"></app-filter-clients-form>
+
     <div class="d-flex flex-column w-100 overflow-auto">
       <table class="custom-table text-nowrap">
         <thead class="bg-light border-bottom">
