--- a/src/app/pages/dashboard/clients/clients.component.html
+++ b/src/app/pages/dashboard/clients/clients.component.html
@@ -7,41 +7,56 @@
       <span *ngIf="showFilters">Hide Filters</span>
       <span *ngIf="!showFilters">Show Filters</span>
     </button>
-    <button class="btn btn-secondary ms-2"><i class="fas fa-download me-2"></i>Export List</button>
-    <button class="btn btn-primary ms-2" (click)="openClientFormDialog(0)"><i class="fas fa-plus-circle me-2"></i>Add New Client</button>
+    <button class="btn btn-primary" (click)="openClientFormDialog(0)"><i class="fas fa-plus-circle me-2"></i>Add New Client</button>
   </div>
 
   <div class="d-flex overflow-hidden">
 
     <app-filter-clients-form [showFilters]="showFilters"></app-filter-clients-form>
 
-    <div class="d-flex flex-column w-100 overflow-auto">
-      <table class="custom-table text-nowrap">
+    <div class="d-flex flex-column w-100 overflow-auto" style="height: calc(100vh - 100px)">
+      <div class="py-5 d-flex align-items-center justify-content-center" *ngIf="gettingClients">
+        <div class="spinner-border spinner-border-sm" role="status"></div>
+        <span class="ms-2 text-nowrap">Loading Clients...</span>
+      </div>
+      <table class="custom-table text-nowrap" *ngIf="!gettingClients">
         <thead class="bg-light border-bottom">
           <th scope="col">Id</th>
           <th scope="col">Company</th>
           <th scope="col">Full Name</th>
           <th scope="col">Tags</th>
+          <th scope="col">Email</th>
+          <th scope="col">Cell</th>
+          <th scope="col">Tel</th>
           <th scope="col">Last Contacted</th>
           <th scope="col">Follow Up</th>
+          <th scope="col">Added</th>
+          <th scope="col">Updated</th>
+          <th scope="col">Last Editor</th>
           <th scope="col"></th>
         </thead>
         <tbody>
           <tr class="border-top border-bottom" *ngFor="let client of clients">
             <td>{{client.id}}</td>
-            <td>{{client.company.name}}</td>
+            <td>{{client.company?.name}}</td>
             <td>{{client.name}} {{client.surname}}</td>
             <td class="text-break">
-                <span class="badge rounded-pill bg-primary me-1" *ngFor="let clientTag of client.clientTags">{{clientTag.tag.name}}</span>
+                <span class="badge rounded-pill bg-primary me-1" *ngFor="let clientTag of client.clientTags">{{clientTag?.tag?.name}}</span>
             </td>
+            <td>{{client.email}}</td>
+            <td>{{client.cellNumber}}</td>
+            <td>{{client.telNumber}}</td>
             <td>{{client.dateLastContacted | date: 'longDate'}}</td>
             <td>{{client.dateFollowUp | date: 'longDate'}}</td>
+            <td>{{client.dateAdded | date: 'longDate'}}</td>
+            <td>{{client.dateLastUpdated | date: 'longDate'}}</td>
+            <td>{{client.lastEditor}}</td>
             <td>
               <button  class="btn btn-secondary btn-circle" [matMenuTriggerFor]="menu"><i class="fas fa-ellipsis-v"></i></button>
               <mat-menu #menu="matMenu" class="custom-dropdown">
-                <button class="dropdown-item" type="button"><i class="fas fa-folder-open"></i>View All Details</button>
                 <button class="dropdown-item" type="button"><i class="fas fa-edit"></i>Edit Details</button>
-                <hr class="dropdown-divider">
+                <button class="dropdown-item" type="button" (click)="openClientTagsDialog(client.id)"><i class="fas fa-tag"></i>Edit Tags</button>
+                <hr class="my-2">
                 <button class="dropdown-item text-danger" type="button"><i class="fas fa-trash"></i>Delete</button>
               </mat-menu>
             </td>
