--- a/src/app/pages/dashboard/clients/client-form-dialog/client-form-dialog.component.html
+++ b/src/app/pages/dashboard/clients/client-form-dialog/client-form-dialog.component.html
@@ -1,38 +1,35 @@
 <div class="modal-dialog modal-dialog-scrollable">
-    <div class="modal-content" *ngIf="gettingClient">
+    <div class="modal-content" *ngIf="gettingClient || gettingCompanies">
         <div class="py-5 d-flex align-items-center justify-content-center">
             <div class="spinner-border" role="status"></div>
-            <span class="me-2 text-nowrap">Loading client details...</span>
+            <span class="ms-2 text-nowrap">Loading client form...</span>
         </div>
     </div>
-    <form class="modal-content" [formGroup]="form" *ngIf="!gettingClient">
+    <form class="modal-content" [formGroup]="form" *ngIf="!gettingClient && !gettingCompanies">
         <div class="modal-header">
             <h4 class="my-auto" *ngIf="data.id == 0">Add New Client</h4>
             <h4 class="my-auto" *ngIf="data.id > 0">Edit Client</h4>
             <button type="button" class="btn-close" (click)="closeDialog('closed')"></button>
         </div>
         <div class="modal-body">
-
             <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
                 <input type="text" class="form-control" id="name" formControlName="name"
                     [ngClass]="{ 'is-invalid': submitted && form.controls.name.errors}">
                 <div class="invalid-feedback">
                     <div *ngIf="form.controls.name.errors?.required">Required field</div>
-                    <div *ngIf="form.controls.name.errors?.maxlength">Exceeded the max length of 500 characters</div>
+                    <div *ngIf="form.controls.name.errors?.maxlength">Exceeded the max length of 255 characters</div>
                 </div>
             </div>
-
             <div class="mb-3">
                 <label for="surname" class="form-label">Surname</label>
                 <input type="text" class="form-control" id="surname" formControlName="surname"
                     [ngClass]="{ 'is-invalid': submitted && form.controls.name.errors}">
                 <div class="invalid-feedback">
                     <div *ngIf="form.controls.surname.errors?.required">Required field</div>
-                    <div *ngIf="form.controls.surname.errors?.maxlength">Exceeded the max length of 500 characters</div>
+                    <div *ngIf="form.controls.surname.errors?.maxlength">Exceeded the max length of 255 characters</div>
                 </div>
             </div>
-
             <div class="mb-3">
                 <label for="company" class="form-label">Company</label>
                 <select class="form-select" id="company" formControlName="company">
@@ -40,11 +37,7 @@
                     <option value="{{company.id}}" *ngFor="let company of companies">{{company.name}}</option>
                 </select>
                 <div class="form-text">Leave blank if the client does not belong to a company.</div>
-                <div class="invalid-feedback">
-                    <div *ngIf="form.controls.surname.errors?.required">Required field</div>
-                </div>
             </div>
-
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
                 <input type="text" class="form-control" id="email" formControlName="email"
@@ -52,54 +45,30 @@
                 <div class="invalid-feedback">
                     <div *ngIf="form.controls.email.errors?.required">Required field</div>
                     <div *ngIf="form.controls.email.errors?.email">Invalid email address</div>
-                    <div *ngIf="form.controls.email.errors?.maxlength">Exceeded the max length of 500 characters</div>
+                    <div *ngIf="form.controls.email.errors?.maxlength">Exceeded the max length of 255 characters</div>
                 </div>
             </div>
-
             <div class="mb-3">
                 <label for="cellNumber" class="form-label">Cell Number</label>
                 <input type="text" class="form-control" id="cellNumber" formControlName="cellNumber"
                     [ngClass]="{ 'is-invalid': submitted && form.controls.cellNumber.errors}">
                 <div class="invalid-feedback">
                     <div *ngIf="form.controls.cellNumber.errors?.required">Required field</div>
-                    <div *ngIf="form.controls.cellNumber.errors?.maxlength">Exceeded the max length of 500 characters
-                    </div>
+                    <div *ngIf="form.controls.cellNumber.errors?.maxlength">Maximum 10 characters</div>
+                    <div *ngIf="form.controls.cellNumber.errors?.minlength">Minimum 10 characters</div>
+                    <div *ngIf="form.controls.cellNumber.errors?.pattern">Numeric values only</div>
                 </div>
             </div>
-
             <div class="mb-3">
                 <label for="telNumber" class="form-label">Telephone Number</label>
                 <input type="text" class="form-control" id="telNumber" formControlName="telNumber"
                     [ngClass]="{ 'is-invalid': submitted && form.controls.telNumber.errors}">
                 <div class="invalid-feedback">
-                    <div *ngIf="form.controls.telNumber.errors?.required">Required field</div>
-                    <div *ngIf="form.controls.telNumber.errors?.maxlength">Exceeded the max length of 500 characters
-                    </div>
+                    <div *ngIf="form.controls.telNumber.errors?.maxlength">Maximum 10 characters</div>
+                    <div *ngIf="form.controls.telNumber.errors?.minlength">Minimum 10 characters</div>
+                    <div *ngIf="form.controls.telNumber.errors?.pattern">Numeric values only</div>
                 </div>
             </div>
-
-            <div class="mb-3">
-                <label for="dateLastContacted" class="form-label">Date Last Contacted</label>
-                <input type="date" class="form-control" id="dateLastContacted" formControlName="dateLastContacted"
-                    [ngClass]="{ 'is-invalid': submitted && form.controls.dateLastContacted.errors}">
-                <div class="invalid-feedback">
-                    <div *ngIf="form.controls.dateLastContacted.errors?.required">Required field</div>
-                    <div *ngIf="form.controls.dateLastContacted.errors?.maxlength">Exceeded the max length of 500
-                        characters</div>
-                </div>
-            </div>
-
-            <div class="mb-3">
-                <label for="dateFollowUp" class="form-label">Follow Up Date</label>
-                <input type="date" class="form-control" id="dateFollowUp" formControlName="dateFollowUp"
-                    [ngClass]="{ 'is-invalid': submitted && form.controls.dateFollowUp.errors}">
-                <div class="invalid-feedback">
-                    <div *ngIf="form.controls.dateFollowUp.errors?.required">Required field</div>
-                    <div *ngIf="form.controls.dateFollowUp.errors?.maxlength">Exceeded the max length of 500 characters
-                    </div>
-                </div>
-            </div>
-
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" (click)="closeDialog('closed')">Cancel</button>
