--- a/src/app/pages/dashboard/clients/filter-clients-form/filter-clients-form.component.html
+++ b/src/app/pages/dashboard/clients/filter-clients-form/filter-clients-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" class="d-flex flex-column border-end" style="width: 400px; height: calc(100vh - 100px)"
+<form [formGroup]="form" class="d-flex flex-column border-end" style="width: 400px; height: calc(100vh - 134px)"
   [ngClass]="{'d-block': showFilters, 'd-none' : !showFilters }">
 
   <div class="d-flex border-bottom px-3 py-2 bg-light">
@@ -7,11 +7,11 @@
 
   <div class="p-3 overflow-auto">
 
-    <label class="form-label">Search Client Name</label>
-    <input type="text" class="form-control mb-3" id="search" formControlName="search" (keyup)="searchClients($event)">
-
-    <label class="form-label">Search Company Name</label>
-    <input type="text" class="form-control mb-3" id="searchCompany" formControlName="searchCompany" (keyup)="searchCompanies($event)">
+    <label class="form-label">Search</label>
+    <div class="input-group mb-3">
+      <span class="input-group-text bg-light border-left-0"><i class="fa-solid fa-magnifying-glass"></i></span>
+      <input type="text" class="form-control" placeholder="Search name, surname, company">
+    </div>
 
     <label class="form-label">Added Date Range</label>
     <div class="d-flex mb-3 align-items-center">
@@ -41,11 +41,6 @@
       <input type="date" class="form-control" id="dateFollowUpEnd" formControlName="dateFollowUpEnd">
     </div>
 
-    <label class="form-label">Last Editor</label>
-    <select class="form-select mb-3" id="lastEditor" formControlName="lastEditor">
-      <option selected></option>
-      <option value="{{user.name + ' ' + user.surname}}" *ngFor="let user of users">{{user.name + ' ' + user.surname}}</option>
-    </select>
   </div>
 
   <div class="d-flex border-top p-3 bg-light mt-auto">
