--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,7 +35,7 @@ $light-focus: rgba($light, 0.8);
 $success-focus: rgba($success, 0.8);
 $warning-focus: rgba($warning, 0.8);
 
-$box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+$box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
 
 $theme-colors: (
     "primary": $primary,
@@ -81,6 +81,7 @@ $font-size-base: 0.9rem;
 
 //Form control styles
 $input-focus-box-shadow: none;
+$input-bg: $light;
 
 //Form select styles
 $form-select-focus-box-shadow: none;
