--- a/src/app/components/clients/client-list/client-list.component.html
+++ b/src/app/components/clients/client-list/client-list.component.html
@@ -21,6 +21,27 @@
                 <button class="btn ms-auto">
                     <i class="fa-solid fa-refresh me-2"></i>Refresh
                 </button>
+                <div class="dropdown ms-2">
+                    <button class="btn" data-bs-toggle="dropdown">
+                        Contacted: <b>All</b> <i class="fa-solid fa-caret-down ms-2"></i>
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item">All</a></li>
+                        <li><a class="dropdown-item">Today</a></li>
+                        <li><a class="dropdown-item">Yesterday</a></li>
+                    </ul>
+                </div>
+                <div class="dropdown ms-2">
+                    <button class="btn" data-bs-toggle="dropdown">
+                        Follow Up: <b>{{followUpPeriod}}</b> <i class="fa-solid fa-caret-down ms-2"></i>
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('All')">All</a></li>
+                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('Today')">Today</a></li>
+                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('Tomorrow')">Tomorrow</a></li>
+                        <li><a class="dropdown-item" (click)="filterByFollowUpPeriod('Overdue')">Overdue</a></li>
+                    </ul>
+                </div>
                 <button class="btn ms-2" disabled>
                     <i class="fa-solid fa-file-arrow-down me-2"></i>Export
                 </button>
@@ -30,15 +51,15 @@
             </div>
         </div>
         <div class="col-12">
-            <ul class="nav nav-tabs">
-                <li class="nav-item">
-                    <a class="nav-link active">All</a>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" data-bs-toggle="tab" (click)="filterByStatus('all')">All</button>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link">Active</a>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" data-bs-toggle="tab" (click)="filterByStatus('active')">Active</button>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link">Inactive</a>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" data-bs-toggle="tab" (click)="filterByStatus('inactive')">Inactive</button>
                 </li>
             </ul>
             <table class="table table-striped table-hover">
@@ -77,9 +98,8 @@
                             <span class="badge rounded-pill bg-secondary m-1">Retail</span>
                         </td>
                         <td>
-                            <span class="d-block">{{client.dateLastContacted | date: "longDate"}}</span>
-                            <small class="text-muted">{{getDateDays(client.dateLastContacted).message}} by Rene
-                                Styber</small>
+                            <span class="d-block">{{client.dateContacted | date: "longDate"}}</span>
+                            <small class="text-muted">{{getDateDays(client.dateContacted).message}}</small>
                         </td>
                         <td>
                             <span class="d-block">
@@ -91,8 +111,7 @@
                                     *ngIf="getDateDays(client.dateFollowUp).message == 'Today' && client.isActive"></i>
                                 {{client.dateFollowUp | date: "longDate"}}
                             </span>
-                            <small class="text-muted">{{getDateDays(client.dateFollowUp).message}} for Rene
-                                Styber</small>
+                            <small class="text-muted">{{getDateDays(client.dateFollowUp).message}}</small>
                         </td>
                         <td>
                             <span *ngIf="client.isActive"><span
