Update profile form

--- a/src/app/components/clients/client-list/client-list.component.html
+++ b/src/app/components/clients/client-list/client-list.component.html
@@ -94,9 +94,10 @@
                         </td>
                         <td>{{client.companyName}}</td>
                         <td style="max-width: 200px;" class="text-wrap">
-                            <span class="badge rounded-pill bg-transparent-primary m-1">Investor</span>
-                            <span class="badge rounded-pill bg-transparent-primary m-1">Developer</span>
-                            <span class="badge rounded-pill bg-transparent-primary m-1">Retail</span>
+                            <span class="badge rounded-pill bg-transparent-primary m-1">Tag</span>
+                            <span class="badge rounded-pill bg-transparent-primary m-1">Tag</span>
+                            <span class="badge rounded-pill bg-transparent-primary m-1">Tag</span>
+                            <span class="badge rounded-pill bg-transparent-primary m-1">Tag</span>
                         </td>
                         <td>
                             <span class="d-block">{{client.dateLastContacted | date: "longDate"}}</span>
