--- a/src/app/components/users/user-list/user-list.component.html
+++ b/src/app/components/users/user-list/user-list.component.html
@@ -48,9 +48,9 @@
                         </td>
                         <td>
                             <span *ngIf="user.isActivated"><span
-                                    class="badge rounded-pill bg-success">Activated</span></span>
+                                    class="badge rounded-pill bg-transparent-success">Activated</span></span>
                             <span *ngIf="!user.isActivated"><span
-                                    class="badge rounded-pill bg-danger">Deactivated</span></span>
+                                    class="badge rounded-pill bg-transparent-danger">Deactivated</span></span>
                         </td>
                         <td class="text-end">
                             <div class="dropdown">
