--- a/src/app/components/password/password.component.html
+++ b/src/app/components/password/password.component.html
@@ -39,14 +39,13 @@
                         </div>
                     </div>
                     <div class="d-flex">
-                        <button type="button" class="btn btn-secondary me-2" (click)="resetForm()">Cancel</button>
-                        <button type="button" class="btn btn-primary" (click)="submit()" [disabled]="updatingPassword">
+                        <button type="button" class="btn btn-primary" (click)="updatePassword()" [disabled]="updatingPassword">
                             <span *ngIf="!updatingPassword">Update Password</span>
-                            <span *ngIf="updatingPassword">
-                                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                                <span class="ms-2">Updating Password</span>
-                            </span>
-                        </button>
+                            <div class="d-flex" *ngIf="updatingPassword">
+                              <span class="spinner-border spinner-border-sm"></span>
+                              <span class="ms-2">Updating Password</span>
+                            </div>
+                          </button>
                     </div>
                 </form>
             </div>
